docs: fixed clients section on mobile

--- a/apps/docs/src/css/custom.css
+++ b/apps/docs/src/css/custom.css
@@ -457,7 +457,7 @@ aside:not(.theme-doc-sidebar-container) {
     border: none;
     font-size: 1rem;
 }
-.navbar .button:last-child {
+.navbar .navbar__item.button:last-child {
     margin-right: 0;
 }
 .navbar .button:hover {
